@@ -3,11 +3,11 @@ Section: database
 Priority: optional
 Maintainer: Christoph Berg <myon@debian.org>
 Build-Depends:
- bison,
+ bison (>> 2:3),
  debhelper (>> 9),
  flex,
  postgresql-server-dev-all (>= 153~),
-Standards-Version: 4.1.3
+Standards-Version: 4.1.5
 Vcs-Git: https://github.com/ChristophBerg/postgresql-unit.git
 Vcs-Browser: https://github.com/ChristophBerg/postgresql-unit
 Homepage: https://github.com/ChristophBerg/postgresql-unit
