@@ -3,6 +3,8 @@ postgresql-unit (7.0-1) UNRELEASED; urgency=medium
   * Format time using commonyears + days + hh:mm:ss.sss s.
   * Modify @(unit, text) operator to return text instead of cstring.
   * Import definitions.units from GNU units 2.17 with 13 new units.
+  * Remove bison 2 compat mode, but keep pregenerated files for jessie and
+    trusty.
 
  -- Christoph Berg <myon@debian.org>  Sun, 08 Jul 2018 21:46:17 +0200
 
